5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4177/executions/1679_1104.log
== TEST (2019-05-01 21:49:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
d=float(input("Valor de d: "))
if((b<=a)or(d<=c)):
	print('Intervalo 1:', a,',', b)
   print('Intervalo 2:', c,',', d)
	print('Entradas invalidas')
elif(((c>=a)and(c<=b))or((d>=a)and(d<=b))):
	print('Intervalo 1: a, b')
-- ERROR:
File "XXXX", line 10
    print('Intervalo 2:', c,',', d)
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:51:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
d=float(input("Valor de d: "))
if((b<=a)or(d<=c)):
	print('Intervalo 1:', a,',', b)
   print('Intervalo 2:', c,',', d)
	print('Entradas invalidas')
elif(((c>=a)and(c<=b))or((d>=a)and(d<=b))):
	print('Intervalo 1: a, b'('Intervalo 2: a, d')
-- ERROR:
File "XXXX", line 10
    print('Intervalo 2:', c,',', d)
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:52:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
d=float(input("Valor de d: "))
if((b<=a)or(d<=c)):
	print('Intervalo 1:', a,',', b)
   print('Intervalo 2:', c,',', d)
	print('Entradas invalidas')
elif(((c>=a)and(c<=b))or((d>=a)and(d<=b))):
	print('Intervalo 1: a, b'('Intervalo 2: c, d')
-- ERROR:
File "XXXX", line 10
    print('Intervalo 2:', c,',', d)
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:59:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
d=float(input("Valor de d: "))
if((b<=a)or(d<=c)):
	print('Intervalo 1:', a,',', b)
   print('Intervalo 2:', c,',', d)
	print('Entradas invalidas')
elif(((c>=a)and(c<=b))or((d>=a)and(d<=b))):
	print('Intervalo 1:' a, ',', b)
	print('Intervalo 2:' c, ',', d)
	print('Entradas invalidas')
else:
	print('Intervalo 1: ', a, ',', b)
	print('Intervalo 2: ', c, ',', d)
	print('Nao ha intersecao')
-- ERROR:
File "XXXX", line 10
    print('Intervalo 2:', c,',', d)
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:00:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
d=float(input("Valor de d: "))
if((b<=a)or(d<=c)):
	print('Intervalo 1:', a, ',', b)
   print('Intervalo 2:', c, ',', d)
	print('Entradas invalidas')
elif(((c>=a)and(c<=b))or((d>=a)and(d<=b))):
	print('Intervalo 1:' a, ',', b)
	print('Intervalo 2:' c, ',', d)
	print('Entradas invalidas')
else:
	print('Intervalo 1: ', a, ',', b)
	print('Intervalo 2: ', c, ',', d)
	print('Nao ha intersecao')
-- ERROR:
File "XXXX", line 10
    print('Intervalo 2:', c, ',', d)
                                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
